# xmitgcm

./: .bumpversion.cfg  .coveragerc  .gitattributes  .travis.yml  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: ci.yaml  pythonpublish.yaml
binder/: environment.yml
ci/: environment-py2.7.yml  environment-py27-numpy1.11.1.yml  environment-py27-xarray0.10.9.yml  environment-py27-xarray0.11.3.yml  environment-py27.yml  environment-py3.10.yml  environment-py3.11.yml  environment-py3.12.yml  environment-py3.13.yml  environment-py3.6.yml  environment-py3.7.yml  environment-py3.8.yml  environment-py3.9.yml  environment-py35-xarray0.10.9.yml  environment-py35-xarray0.11.3.yml  environment-py35.yml  environment-py36-xarray0.10.9.yml  environment-py36-xarray0.11.3.yml  environment-py36-xarray0.12.0.yml  environment-py36-xarraymaster.yml  environment-py36.yml  environment-py37-xarraymaster.yml  environment-py37.yml  environment-py38.yml  environment-xarraymaster.yml
doc/: conf.py  demo_read_input_grid.ipynb  demo_writing_binary_file.ipynb  development.rst  environment.yml  examples.rst  index.rst  installation.rst  llcreader.rst  performance.rst  quick_start.rst  usage.rst  utils.rst
example_notebooks/: tutorial_read_dataset.ipynb
xmitgcm/: __init__.py  _version.py  default_diagnostics.py  demo.py  file_utils.py  llc_utils.py  mds_store.py  mds_tilez.py  utils.py  variables.py
xmitgcm/llcreader/: __init__.py  duck_array_ops.py  known_models.py  llcmodel.py  llcutils.py  shrunk_index.py  stores.py
xmitgcm/test/: test_file_utils.py  test_llcreader.py  test_llcreader_local.py  test_mds_store.py  test_mds_tilez.py  test_utils.py  test_xmitgcm_common.py
